[package]
name = "jos"
version = "0.1.0"
authors = ["Syd Xu <prof.syd.xu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
rust-crypto = "^0.2"
chrono = "0.4"
num = "0.3.0"